examples/bad/auto_assignment2.latf
auto f(int x) {
    return lambda (int y) -> int {
        return x + y;
    };
}

int main() {
    auto g = f(-5);

    int x;
    g = lambda (int ref z) -> auto . z + 1; // error - incompatible types

    return 0;
}